updates to user interface

--- a/littlecrm/templates/base1.html
+++ b/littlecrm/templates/base1.html
@@ -11,19 +11,11 @@
     <div class="container col-md-3">
         <form action='/' method='post'>
             <div class="mb-3">
-                <label class="form-label">Schedule appointment, view planner, add client, remove client, delete appointment>
+                <label class="form-label">Enter the number for your route (schedule appointment: 1, view planner: 2, create client: 3, delete client: 4, delete appointment: 5, check tables: 6, load calendar: 7, refresh: 8)
                 <input name="search" type="text" class="form-control">
-                <!-- <label class="form-label"></label>
-                <input name="search3" type="text" class="form-control"> -->
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-
-        <!-- {% if user_input %}
-        <div>
-            <p>You requested the song: "{{user_input}}"</p>
-        </div>
-        {% endif %} -->
 
     </div>
 </body>
