--- a/littlecrm/templates/base2.html
+++ b/littlecrm/templates/base2.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container col-md-3">
-        <form action='/planner' method='post'>
+        <form action='/view_planner' method='post'>
             <div class="mb-3">
                 <label class="form-label">Enter a date range mm/dd - mm/dd or single date mm/dd)>
                 <input name="search1" type="text" class="form-control">
