--- a/littlecrm/templates/base5.html
+++ b/littlecrm/templates/base5.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container col-md-3">
-        <form action='/remove_client' method='post'>
+        <form action='/delete_client' method='post'>
             <div class="mb-3">
                 <label class="form-label">Enter client id
                 <input name="search10" type="text" class="form-control">
