--- a/littlecrm/templates/results.html
+++ b/littlecrm/templates/results.html
@@ -11,7 +11,7 @@
 <h1> Date: {{answer}} </h1>
 
 <div class="container" id=footer>
-    <form action="/planner">
+    <form action="/view_planner">
         <button type="submit">Go Back</button>
     </form>
 </div>
