--- a/littlecrm/templates/results5.html
+++ b/littlecrm/templates/results5.html
@@ -11,7 +11,7 @@
 <h1> Removed client: {{answer}} </h1>
 
 <div class="container" id=footer>
-    <form action="/remove_client">
+    <form action="/delete_client">
         <button type="submit">Go Back</button>
     </form>
 </div>
