updated user interface

--- a/littlecrm/templates/base1.html
+++ b/littlecrm/templates/base1.html
@@ -11,7 +11,7 @@
     <div class="container col-md-3">
         <form action='/' method='post'>
             <div class="mb-3">
-                <label class="form-label">Enter the number for your route (schedule appointment: 1, view planner: 2, create client: 3, delete client: 4, delete appointment: 5, check tables: 6, load calendar: 7, refresh: 8)
+                <label class="form-label">Enter the number for your route (schedule appointment: 1, view planner: 2, create client: 3, delete client: 4, delete appointment: 5, client appointments: 6, check tables: 7, load calendar: 8, refresh: 9)
                 <input name="search" type="text" class="form-control">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
