--- a/littlecrm/templates/results3.html
+++ b/littlecrm/templates/results3.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
     </head>
-<h1> Hello: {{answer}} </h1>
+<h1> Update: {{answer}} </h1>
 
 <div class="container" id=footer>
     <form action="/create_client">
